# dosh-cli

./: .gitignore  .pre-commit-config.yaml  README.md  build_with_nuitka.sh  default.nix  dosh-cli.iss  install.ps1  install.sh  package.sh  package_for_windows.sh  pyproject.toml
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: package.yml
dosh_cli/: __init__.py  __main__.py  cli.py  main.py
tests/: test_cli.py
