[tool.poetry]
name = "dosh-cli"
version = "0.1.0"
description = ""
authors = ["Gökmen Görgen <gkmngrgn@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "dosh_cli"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
